<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:descendantFocusability="beforeDescendants"
    tools:ignore="contentDescription"
    >

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.android.kungfuquiz.MainActivity"
        tools:ignore="ignoreContentDescription"
        android:background="@color/yellow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:padding="20dp"
            android:text="@string/appQuiz"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/firstQuestion"
            android:layout_width="100dp"
            android:layout_centerHorizontal="true"
            android:layout_height="100dp"
            android:layout_marginLeft="90dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/kungfu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="220dp"
            android:text="@string/firstQuestion"
            android:textColor="#000000"
            android:textSize="19sp"
            android:id="@+id/textView" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/japanase_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="250dp"
                android:text="@string/japanese"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/chinese_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/chinese"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/thailand_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/thailand"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/wushu"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="390dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="520dp"
            android:padding="7dp"
            android:text="@string/secondQuestion"
            android:textColor="#000000"
            android:textSize="19sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/wushu_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="560dp"
                android:text="@string/wushu"
                android:textSize="19sp" />

            <CheckBox
                android:id="@+id/shitoryu_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="560dp"
                android:text="@string/shitoryu"
                android:textSize="19sp" />
            <CheckBox
                android:id="@+id/shaolin_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="560dp"
                android:text="@string/shaolin"
                android:textSize="19sp" />
        </LinearLayout>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="625dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/templeshaolin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="760dp"
            android:padding="5dp"
            android:text="@string/thirdQuestion"
            android:textColor="#000000"
            android:textSize="19sp" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup">

            <RadioButton
                android:id="@+id/young_forest_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="800dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/youngForestTemple"
                android:textSize="19sp" />
            <RadioButton
                android:id="@+id/hardwork_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/hardwork"
                android:textSize="19sp" />
            <RadioButton
                android:id="@+id/martial_art_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/martialArt"
                android:textSize="19sp" />
            <RadioButton
                android:id="@+id/military_art_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/militaryArt"
                android:textSize="19sp" />
        </RadioGroup>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/radioGroup"
            android:layout_marginTop="50dp"
            android:padding="2dp"
            android:src="@drawable/stanceskf" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forthQuestion"
            android:layout_centerHorizontal="true"
            android:textSize="19sp"
            android:textColor="#000000"
            android:layout_marginTop="1140dp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1170dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/four"
                android:textAppearance="?android:textAppearanceMedium"/>
            <RadioButton
                android:id="@+id/five_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1170dp"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:text="@string/five"
                android:textAppearance="?android:textAppearanceMedium"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1170dp"
                android:layout_marginStart="110dp"
                android:layout_marginLeft="110dp"
                android:text="@string/seven"
                android:textAppearance="?android:textAppearanceMedium"/>
        </RadioGroup>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/yinyang2"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:layout_marginTop="1200dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifthQuestion"
            android:layout_centerHorizontal="true"
            android:textSize="19sp"
            android:textColor="#000000"
            android:layout_marginTop="1300dp"/>
        <EditText
            android:id="@+id/yinyang_answer"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/yinyanmeaning"
            android:textColorHint="#000000"
            android:textColor="#000000"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1330dp"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/hardwork"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1400dp"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="1520dp"
            android:text="@string/kungfuis"
            android:layout_centerHorizontal="true"
            android:textSize="19sp"
            android:textColor="#000000"
            >

        </TextView>
        <EditText
            android:id="@+id/kungfumeaning"
            android:layout_width="wrap_content"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:hint="@string/yinyanmeaning"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1560dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:onClick="submitScore"
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="1620dp"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="resetAnswers"
            android:text="@string/reset"
            android:layout_marginTop="1620dp"
            android:layout_marginStart="210dp"
            android:layout_marginLeft="690dp"/>
    </RelativeLayout>
</ScrollView>